<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_profile_upload_activity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        >
        <TextView
            android:id="@+id/tv_sign_up_toolbar_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/sign_up"
            android:textSize="@dimen/disclosure_text_size"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            />
    </androidx.appcompat.widget.Toolbar>

<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="@dimen/editText_margin_start"
        android:layout_marginEnd="@dimen/editText_margin_end"
        android:layout_marginBottom="@dimen/margin_top_bottom"
        android:text="@string/upload_profile_disclosure"
        android:textSize="@dimen/disclosure_text_size"
        />


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/civ_my_profile_image_selector"
        android:layout_width="@dimen/circular_image_size"
        android:layout_height="@dimen/circular_image_size"
        android:layout_marginBottom="@dimen/margin_top_bottom"
        android:layout_gravity="center"
        android:src="@drawable/ic_launcher_background"
        app:civ_border_width="@dimen/circular_image_border_width"
        app:civ_border_color="@android:color/darker_gray"
        />

    <Button
        android:id="@+id/btn_upload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_round_background"
        android:foreground="?attr/selectableItemBackground"
        android:layout_marginStart="@dimen/btn_marginStartEnd"
        android:layout_marginEnd="@dimen/btn_marginStartEnd"
        android:text="@string/upload"
        android:textSize="@dimen/btn_text_size"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        />

    </LinearLayout>

</LinearLayout>