<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LocationRequest"
    android:orientation="vertical"
    android:gravity="center"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_location_request_activity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        >
        <TextView
            android:id="@+id/tv_location_request_toolbar_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/location"
            android:textSize="@dimen/disclosure_text_size"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_top_bottom"
        android:layout_marginBottom="@dimen/margin_top_bottom"
        >
        <Button
            android:id="@+id/btn_display"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/textView_button_margin_left_right"
            android:layout_marginRight="@dimen/textView_button_margin_left_right"
            android:text="@string/display"
            android:textStyle="bold"
            android:background="@drawable/button_round_background"
            android:foreground="?attr/selectableItemBackground"
            />
        <Button
            android:id="@+id/btn_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/textView_button_margin_left_right"
            android:layout_marginRight="@dimen/textView_button_margin_left_right"
            android:text="@string/save"
            android:textStyle="bold"
            android:enabled="false"
            android:background="@drawable/button_round_background"
            android:foreground="?attr/selectableItemBackground"
            />
    </LinearLayout>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:elevation="@dimen/cardView_elevation"
        app:cardCornerRadius="@dimen/corner_radius"
        >
    <TextView
        android:id="@+id/tv_no_weather_details_available"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/no_weather_details_available"
        android:visibility="visible"
        tools:visibility="visible"
        />
        <LinearLayout
            android:id="@+id/ll_single_weather_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible"
            >
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/cardView_padding"
                app:cardCornerRadius="@dimen/corner_radius"
                android:background="@color/cardview_light_background"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <LinearLayout
                        android:id="@+id/ll_location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        >
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/location"
                            android:textStyle="bold"
                            />
                        <TextView
                            android:id="@+id/tv_location"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:hint="@string/location"
                            android:textStyle="bold"
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        >
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            >
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                >
                                <LinearLayout
                                    android:id="@+id/ll_temp_current"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal"
                                    >
                                    <TextView
                                        android:layout_width="0dp"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="1"
                                        android:text="@string/temp"
                                        android:textStyle="bold"
                                        />
                                    <TextView
                                        android:id="@+id/tv_temp_current"
                                        android:layout_width="0dp"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="1"
                                        android:hint="@string/temp"
                                        android:textStyle="bold"
                                        />
                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/temp_unit"
                                        android:textStyle="italic"
                                        />
                                </LinearLayout>
                                <LinearLayout
                                    android:id="@+id/ll_temp_max"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal"
                                    >
                                    <TextView
                                        android:layout_width="0dp"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="1"
                                        android:text="@string/temp_max"
                                        android:textStyle="bold"
                                        />
                                    <TextView
                                        android:id="@+id/tv_temp_max"
                                        android:layout_width="0dp"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="1"
                                        android:hint="@string/temp_max"
                                        android:textStyle="bold"
                                        />
                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/temp_unit"
                                        android:textStyle="italic"
                                        />
                                </LinearLayout>
                                <LinearLayout
                                    android:id="@+id/ll_temp_min"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal"
                                    >
                                    <TextView
                                        android:layout_width="0dp"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="1"
                                        android:text="@string/temp_min"
                                        android:textStyle="bold"
                                        />
                                    <TextView
                                        android:id="@+id/tv_temp_min"
                                        android:layout_width="0dp"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="1"
                                        android:hint="@string/temp"
                                        android:textStyle="bold"
                                        />
                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/temp_unit"
                                        android:textStyle="italic"
                                        />
                                </LinearLayout>
                                <LinearLayout
                                    android:id="@+id/ll_wind"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal"
                                    >
                                    <TextView
                                        android:layout_width="0dp"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="1"
                                        android:text="@string/wind"
                                        android:textStyle="bold"
                                        />
                                    <TextView
                                        android:id="@+id/tv_wind"
                                        android:layout_width="0dp"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="1"
                                        android:hint="@string/wind"
                                        android:textStyle="bold"
                                        />
                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/wind_unit"
                                        android:textStyle="italic"
                                        />
                                </LinearLayout>
                            </LinearLayout>

                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            >
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                >
                                <LinearLayout
                                    android:id="@+id/ll_humidity"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal"
                                    >
                                    <TextView
                                        android:layout_width="0dp"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="1"
                                        android:text="@string/humidity"
                                        android:textStyle="bold"
                                        />
                                    <TextView
                                        android:id="@+id/tv_humidity"
                                        android:layout_width="0dp"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="1"
                                        android:hint="@string/humidity"
                                        android:textStyle="bold"
                                        />
                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/humidity_unit"
                                        android:textStyle="italic"
                                        />
                                </LinearLayout>
                                <LinearLayout
                                    android:id="@+id/ll_sunrise"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal"
                                    >
                                    <TextView
                                        android:layout_width="0dp"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="1"
                                        android:text="@string/sunrise"
                                        android:textStyle="bold"
                                        />
                                    <TextView
                                        android:id="@+id/tv_sunrise"
                                        android:layout_width="0dp"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="1"
                                        android:hint="@string/sunrise"
                                        android:textStyle="bold"
                                        />
                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/time_unit"
                                        android:textStyle="italic"
                                        />
                                </LinearLayout>
                                <LinearLayout
                                    android:id="@+id/ll_sunset"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal"
                                    >
                                    <TextView
                                        android:layout_width="0dp"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="1"
                                        android:text="@string/sunset"
                                        android:textStyle="bold"
                                        />
                                    <TextView
                                        android:id="@+id/tv_sunset"
                                        android:layout_width="0dp"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="1"
                                        android:hint="@string/sunset"
                                        android:textStyle="bold"
                                        />
                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/time_unit"
                                        android:textStyle="italic"
                                        />
                                </LinearLayout>
                            </LinearLayout>

                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>