<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_sign_up_activity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        >
        <TextView
            android:id="@+id/tv_sign_up_toolbar_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/sign_up"
            android:textSize="@dimen/disclosure_text_size"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/editText_margin_start"
            android:layout_marginEnd="@dimen/editText_margin_end"
            android:layout_marginBottom="@dimen/margin_top_bottom"
            android:text="@string/sign_up_disclosure"
            android:textSize="@dimen/disclosure_text_size"
            />


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/cardView_margin_left_right"
            android:layout_marginRight="@dimen/cardView_margin_left_right"
            android:elevation="@dimen/cardView_elevation"
            app:cardCornerRadius="@dimen/corner_radius"
            android:background="@color/cardview_light_background"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/margin_top_bottom"
                android:orientation="vertical"
                >
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_top_bottom"
                    android:layout_marginStart="@dimen/editText_margin_start"
                    android:layout_marginEnd="@dimen/editText_margin_end"
                    >
                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_name_signUp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name"
                        android:inputType="textPersonName"
                        android:textSize="@dimen/textView_text_size"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_top_bottom"
                    android:layout_marginStart="@dimen/editText_margin_start"
                    android:layout_marginEnd="@dimen/editText_margin_end"
                    >
                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_email_signUp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:textSize="@dimen/textView_text_size"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_top_bottom"
                    android:layout_marginStart="@dimen/editText_margin_start"
                    android:layout_marginEnd="@dimen/editText_margin_end"
                    >
                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_password_signUp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textSize="@dimen/textView_text_size"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <Button
                    android:id="@+id/btn_sign_up_process"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:textSize="@dimen/button_text_size"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    android:layout_gravity="center"
                    android:background="@drawable/button_round_background"
                    android:foreground="?attr/selectableItemBackground"
                    />


            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>